commit new files
1. chnaged guest to away
2. added a draw option in the function leader

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <button onclick="add3Home()">+3</button>
             </div>
             <div class="box">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <h1 class="score-el-guest" id="score-el-guest">0</h1>
                 <button onclick="add1Guest()">+1</button>
                 <button onclick="add2Guest()">+2</button>
